# git-crypt

./: .dockerignore  .gitattributes  .gitignore  CLAUDE-secrets.md  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  Dockerfile.dev  INSTALL.md  Makefile  Makefile.trustless  NEWS.md  README.md  docker-compose.yml
.github/workflows/: ci.yml  release.yml
Formula/: git-crypt-revived.rb
doc/: SECURITY.md  age-migration-guide.md  feature-guide.md  post-quantum-readiness.md
hooks/: pre-commit
man/: git-crypt.xml
src/: age.cpp  age.hpp  audit.cpp  audit.hpp  commands.cpp  commands.hpp  git-crypt.cpp  git-crypt.hpp  policy.cpp  policy.hpp  proposal.cpp  proposal.hpp  shamir.cpp  shamir.hpp  sops.cpp  sops.hpp  ssh_signing.cpp  ssh_signing.hpp  util-win32.cpp  wallet.cpp  wallet.hpp
tests/: test_crypto.cpp  test_crypto_extended.cpp  test_key.cpp  test_main.cpp  test_parse_options.cpp  test_trustless_security.cpp
